<resources>
    <string name="app_name">SET12MA</string>

    <string name="tab_SET12MA_text_0">Цифровые</string>
    <string name="tab_SET12MA_text_1">Цифровые</string>
    <string name="tab_SET12MA_text_2">Аналоговые</string>
    <string name="tab_SET12MA_text_3">Ключи</string>

    <string name="tab_SET12MA_text_4">Bluetooth</string>
    <string name="tab_SET12MA_text_5">USB</string>

    <string name="tab_SET12MA_text_6">Загрузка ПО</string>

<!--    <string name="tab_SET12MA_text_6">TMS2812</string>-->
<!--    <string name="tab_SET12MA_text_7">SP2MAIN</string>-->
<!--    <string name="tab_SET12MA_text_8">SP2</string>-->
<!--    <string name="tab_SET12MA_text_9">SP6</string>-->

    <string name="tab_SET12MA_text_10">Скачать</string>
    <string name="tab_SET12MA_text_11">Посмотреть</string>
    <string name="tab_SET12MA_text_12">Настройки</string>

    <string name="tip_text_01">Выберите тип устройства</string>

    <string name="tip_text_0">Выберите файл для загрузки</string>
    <string name="tip_text_1">Путь не указан</string>
    <string name="tip_text_2">Выберите адрес устройства</string>
    <string name="tip_text_3">Файл успешно загружен в память</string>
    <string name="tip_text_4">Устройство с адресом 0 готово к обновлению ПО</string>

    <string name="name_button_0">Путь к файлу</string>
    <string name="name_button_1">Загрузить в память</string>
    <string name="name_button_2">Обновить ПО</string>


    <string name="text_channel_0">Channel 0</string>
    <string name="text_channel_1">Channel 1</string>
    <string name="text_channel_2">Channel 2</string>
    <string name="text_channel_3">Channel 3</string>
    <string name="text_channel_4">Channel 4</string>
    <string name="text_channel_5">Channel 5</string>
    <string name="text_channel_6">Channel 6</string>
    <string name="text_channel_7">Channel 7</string>
    <string name="text_channel_8">Channel 8</string>
    <string name="text_channel_9">Channel 9</string>
    <string name="text_channel_10">Channel 10</string>
    <string name="text_channel_11">Channel 11</string>
    <string name="text_channel_12">Channel 12</string>
    <string name="text_channel_13">Channel 13</string>
    <string name="text_channel_14">Channel 14</string>
    <string name="text_channel_15">Channel 15</string>

    <string name="text_out_0">OUT 0</string>
    <string name="text_out_1">OUT 1</string>
    <string name="text_out_2">OUT 2</string>

    <string name="text_in_0">IN 0</string>
    <string name="text_in_1">IN 1</string>
    <string name="text_in_2">IN 2</string>

    <string name="text_adc_0">ADC 0</string>
    <string name="text_adc_1">ADC 1</string>
    <string name="text_adc_2">ADC 2</string>

    <string name="text_tk_0">TK 0</string>
    <string name="text_tk_1">TK 1</string>
    <string name="text_tk_2">TK 2</string>
    <string name="text_tk_3">TK 3</string>
    <string name="text_tk_4">TK 4</string>
    <string name="text_tk_5">TK 5</string>
    <string name="text_tk_6">TK 6</string>
    <string name="text_tk_7">TK 7</string>

    <string name="text_inital_value">0</string>

    <string name="menu_dataInput">Входы</string>
    <string name="menu_dataOutput">Выходы</string>
    <string name="menu_connection">Подключение</string>
    <string name="menu_logging">Логирование</string>
    <string name="menu_loadingSoftware">Загрузка ПО</string>
    <string name="menu_setting">Настройки</string>
    <string name="menu_dataExchange">Тест</string>

    <string name="main_connection">Bluetooth соединение</string>
    <string name="main_text_connected_devices">Сопряженные устройства</string>
    <string name="main_text_connected_to_device">Не удалось выполнить подключение</string>
    <string name="main_button_connect_to_device">Подключить</string>
    <string name="main_button_unconnect_to_device">Отключить</string>
    <string name="main_text_available_devices">Доступные устройства</string>
    <string name="main_button_find_new_devices">Поиск новых устройств</string>

    <string name="main_connection_comport">USB соединение</string>
    <string name="main_text_baudRate">BaudRate</string>
    <string name="main_text_dataBits">DataBits</string>
    <string name="main_text_stopBits">StopBits</string>
    <string name="main_text_parity">Parity</string>
    <string name="main_button_connect_to_device_cp">Подключить</string>
    <string name="main_text_connected_to_device_cp">Не удалось выполнить подключение</string>

    <string name="download_log">Загрузить</string>
    <string name="save_log">Сохранить</string>
    <string name="send_log">Отправить</string>

    <string name="start_of_ram">Укажите начальный адрес RAM</string>
    <string name="length_of_array">Укажите длину массива</string>
    <string name="size_of_block">Укажите размер одного блока</string>
    <string name="tip_of_HEX">Убедитесь, что значения указаны в HEX</string>

</resources>
