<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/menu_indicator"
            android:orderInCategory="0"
            android:title="@string/menu_dataExchange"
            app:showAsAction="always"
            android:icon="@drawable/red"
            android:visible="true"/>
    <item
            android:id="@+id/menu_dataExchange"
            android:orderInCategory="1"
            android:title="@string/menu_dataExchange" android:visible="true"/>
    <item
            android:id="@+id/menu_connecting"
            android:orderInCategory="2"
            android:title="@string/menu_connection" android:visible="true"/>
    <item
            android:id="@+id/menu_logging"
            android:orderInCategory="3"
            android:title="@string/menu_logging" android:visible="true"/>
    <item
            android:id="@+id/menu_loadingSoftware"
            android:orderInCategory="4"
            android:title="@string/menu_loadingSoftware" android:visible="true"/>

</menu>