<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.main.SP6Fragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/section_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:text="@string/tab_SET12MA_text_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_SP6" android:textSize="24sp"
                    android:gravity="center" android:padding="20dp"/>
            <TextView
                    android:text="@string/tip_text_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_tip_find_file"
                    android:textSize="14sp" android:gravity="center" android:padding="5dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:gravity="center"
                    style="@style/Widget.AppCompat.ButtonBar">
                <Button
                        android:text="@string/name_button_0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/button_choice_path"
                        android:gravity="center" android:padding="10dp"
                        style="@style/Widget.AppCompat.Button.Small"/>
                <Button
                        android:text="@string/name_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/button_load_to_flesh"
                        android:gravity="center" android:padding="10dp"
                        style="@style/Widget.AppCompat.Button.Small"/>
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_path_to_load_file"
                    android:text="@string/tip_text_1" android:visibility="visible"
                    android:gravity="center" android:padding="5dp"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar_loading_to_flesh" android:visibility="invisible"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_status_of_loading"
                    android:text="@string/main_text_connected_to_device" android:visibility="visible"
                    android:gravity="center" android:padding="5dp"/>
            <TextView
                    android:id="@+id/section_label4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_tip_choise_address_of_deviese"
                    android:text="@string/tip_text_2" android:visibility="visible"
                    android:gravity="center" android:padding="5dp"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinner_connected_devices"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/main_text_available_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_available_devices"
                    android:textSize="14sp" android:gravity="center" android:padding="5dp"/>
            <Button
                    android:text="@string/main_button_find_new_devices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button_find_new_devices"
                    android:padding="5dp" style="@style/Widget.AppCompat.Button.Small"
                    android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>