<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.main.FragmentTest">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:padding="@android:dimen/app_icon_size">
            <TextView
                    android:id="@+id/section_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:text="@string/start_of_ram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/start_of_ram"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="A0000"
                    android:ems="10"
                    android:id="@+id/editText_start_of_ram"/>
            <TextView
                    android:id="@+id/section_label5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:text="@string/length_of_array"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/length_of_array"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="5E000"
                    android:ems="10"
                    android:id="@+id/editText2_length_of_array"/>
            <TextView
                    android:id="@+id/section_label6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:text="@string/size_of_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/size_of_block"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="2000"
                    android:ems="10"
                    android:id="@+id/editText_size_of_block"/>
            <TextView
                    android:id="@+id/section_label7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:text="@string/tip_of_HEX"/>
            <TextView
                    android:id="@+id/section_label3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button_download"
                    android:text="@string/download_log"/>
            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar2"/>
            <TextView
                    android:id="@+id/section_label2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_constraintTop_creator="1"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    tools:layout_constraintLeft_creator="1"
            />
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"/>
            <Button
                    android:text="@string/send_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button_send"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>